Fixed overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,4 +22,5 @@
 .container>div {
 	height: 100%;
 	width: 100%;
+	min-width: 0;
 }
